--- a/index.Rmd
+++ b/index.Rmd
@@ -13,7 +13,12 @@ knitr::opts_chunk$set(echo = TRUE)
 - [**Common Error Messages**](./errors.html)
 
 - Week 1 (January 22, 2018)
-    - [Introduction to ODE models in `R`](./20180129_intro_odes/index.html)
+    - [Introduction to ODE models in `R`](./20180129_intro_odes/index.html)   |   [PDF](./20180129_intro_odes/20180129-intro-odes.pdf)
+        - [SIR code review](./epi501_review/20180129_intro_odes/index.html#7)
+        - [Visualize your results](./epi501_review/20180129_intro_odes/index.html#54)
+        - [Make an SI model](./epi501_review/20180129_intro_odes/index.html#64)
+        - [Make an SIS model](./epi501_review/20180129_intro_odes/index.html#70)
+        - [Make an SIR model with births/deaths](./epi501_review/20180129_intro_odes/index.html#73)
     - [Introduction to `R`, discrete time models, non-infectious ODE models.](./20180124_intro_to_R_headaches/index.html) 
     - Download [`headache_exercises.zip`](./exercises/01_headaches/headache_exercises.zip)
         - Or download the code here (not recommended):
