--- a/index.Rmd
+++ b/index.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(echo = TRUE)
 - [**Common Error Messages**](./errors.html)
 
 - Week 1 (January 22, 2018)
-    - [Introduction to ODE models in `R`](./20180129_intro_odes/index.html)   |   [PDF](./20180129_intro_odes/20180129-intro-odes.pdf)
+    - [Introduction to ODE models in `R`](./20180129_intro_odes/index.html) [[PDF](./20180129_intro_odes/20180129-intro-odes.pdf)] [[Code Files](https://github.com/mkiang/epi501_review/tree/master/20180129_intro_odes/code)]
         - [SIR code review](./20180129_intro_odes/index.html#7)
         - [Visualize your results](./20180129_intro_odes/index.html#54)
         - [Make an SI model](./20180129_intro_odes/index.html#64)
