--- a/index.Rmd
+++ b/index.Rmd
@@ -12,6 +12,9 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Table of Contents (reverse chronological)
 - [**Common Error Messages**](./errors.html)
 
+- Week 2 (January 29, 2018)
+    - [Ebola and SEIR models](./20180202_ebola/index.html) [[PDF](./20180202_ebola/20180202-ebola.pdf)] [[Code and Data Files](https://github.com/mkiang/epi501_review/tree/master/20180202_ebola/code)]
+
 - Week 1 (January 22, 2018)
     - [Introduction to ODE models in `R`](./20180129_intro_odes/index.html) [[PDF](./20180129_intro_odes/20180129-intro-odes.pdf)] [[Code Files](https://github.com/mkiang/epi501_review/tree/master/20180129_intro_odes/code)]
         - [SIR code review](./20180129_intro_odes/index.html#7)
