--- a/index.Rmd
+++ b/index.Rmd
@@ -12,6 +12,12 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Table of Contents (reverse chronological)
 - [**Common Error Messages**](./errors.html)
 
+- Week 3 (Februrary 9, 2018)
+    - Review session: 
+        - Went over Week 1 and Week 2 slides in class, line-by-line. Please review those if you didn't attend the lab.
+        - In addition, we spent a lot of time on the ebola time-varying transmission model. 
+            - I made [a notebook to answer the two questions](./20180209_lab_session/ebola_questions.nb.html) we didn't have time for: (1) What happens when you delay intervention? (2) What happens when you change the rate of decay?
+        - As a reminder, [I made an interactive infectious disease app you can play with](https://mkiang.shinyapps.io/DiseaseDynamics/). Play with parameters, especially the relationship between the latent period and the infectious period, to get a better sense of **when** we need a latent compartment.
 - Week 2 (January 29, 2018)
     - [Ebola and SEIR models](./20180202_ebola/index.html) [[PDF](./20180202_ebola/20180202-ebola.pdf)] [[Code and Data Files](https://github.com/mkiang/epi501_review/tree/master/20180202_ebola/code)]
         - [SEIR model with case fatality ratio](./20180202_ebola/index.html#3)
